unfold permanent visible if there are children, fold only visible on hover/select, "verify fixed" #218

--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -171,6 +171,11 @@ body{
     display: none;
 }
 
+.mindmap-canvas .node .inner-node .action-fold.icon-plus-sign
+{
+    display: block;
+}
+
 .mindmap-canvas .node.right .inner-node .action-fold 
 {
     right: -7px;
@@ -343,4 +348,5 @@ ul.nav .no-link {
 .connection 
 {
     position: absolute;
+    border: 1px solid #CCC;
 }
